# foundation-cancer-image-biomarker

./: .gitattributes  .gitignore  404.html  LICENSE  Makefile  README.md  additional_requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  version.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  docs.yml  publish.yml  release-publish.yml  release-workflow.yml
analysis/: combined_results.ipynb  efficiency.ipynb  feature_representations.ipynb  lung1_results.pkl   pretraining.py  pretraining_comparison.ipynb  pretraining_comparison.py  saliency.ipynb  stability.py  task1.ipynb  task1.py  task2.ipynb  task2.py  task3_eval.ipynb  utils.py
data/download/: deeplesion.sh  luna16.sh  lung1.sh  radio.sh  scratch.ipynb
data/preprocessing/deeplesion/: Process_Dataset.ipynb  format_annotations.py  process_annotations.py  process_deeplesion.py  run.sh
data/preprocessing/luna16/: Process_Data.ipynb  README.md  annotations_generator.py  process_luna16.py  run.sh
data/preprocessing/lung1/: annotations.csv  preprocess.ipynb
data/preprocessing/radio/: nsclc_radiogenomics.csv  preprocess.ipynb
docs/: index.md
docs/api_docs/fmcib/: index.html  run.html
docs/assets/: extra.css
docs/getting-started/: cloud-quick-start.md  installation.md  prereqs.md  quick-start.md  repository-structure.md
docs/replication-guide/: analysis.md  baselines.md  data.md  download_models.md  fm_adaptation.md  inference.md  reproduce_fm.md
docs/user-guide/: analysis.md  data.md  download_models.md  fm_adaptation.md  inference.md  models.md  reproduce_baselines.md  reproduce_fm.md  reproduce_models.md
experiments/: extract_features.yaml  get_predictions.yaml
experiments/adaptation/: fmcib_finetune.yaml
experiments/adaptation/linear/: common.py  run.py
experiments/baselines/med3d/: extract_features.yaml  finetune.yaml
experiments/baselines/models_genesis/: extract_features.yaml  finetune.yaml
experiments/baselines/supervised_training/: foundation_finetune.yaml  supervised_finetune.yaml  supervised_random_init.yaml
experiments/inference/: extract_features.yaml  get_predictions.yaml
experiments/linear_evaluation/: common.py  run.py
experiments/pretraining/: autoencoder.yaml  autoencoder_extract_features.yaml  extract_features.yaml  fmcib_pretrain.yaml  nnclr_pretrain.yaml  original_simclr_pretrain.yaml  simclr_pretrain.yaml  simclr_pretrain_22k.yaml  simclr_pretrain_3k.yaml  simclr_pretrain_5k.yaml  simclr_pretrain_8k.yaml  swav_pretrain.yaml
experiments/sota_comparisons/med3d/: extract_features.yaml
experiments/supervised_training/: foundation_finetune.yaml  supervised_finetune.yaml  supervised_random_init.yaml
fmcib/: __init__.py  run.py
fmcib/callbacks/: __init__.py  prediction_saver.py  utils.py
fmcib/datasets/: __init__.py  ssl_radiomics_dataset.py  utils.py
fmcib/models/: __init__.py  autoencoder.py  load_model.py  load_pretrained_model.py  models_genesis.py  resnet50.py
fmcib/optimizers/: __init__.py  lars.py
fmcib/preprocessing/: __init__.py  seed_based_crop.py
fmcib/ssl/losses/: __init__.py  neg_mining_info_nce_loss.py  nnclr_loss.py  ntxent_loss.py  ntxent_mined_loss.py  swav_loss.py
fmcib/ssl/models/: __init__.py  exneg_simclr.py  load_pretrained_resnet.py  nnclr.py  simclr.py  swav.py
fmcib/ssl/modules/: __init__.py  exneg_simclr.py  nnclr.py  simclr.py  swav.py
fmcib/ssl/optimizers/: __init__.py  lars.py
fmcib/ssl/transforms/: __init__.py  duplicate.py  random_resized_crop.py  replicate.py
fmcib/transforms/: __init__.py  duplicate.py  med3d.py  multicrop.py  random_resized_crop.py
fmcib/utils/: __init__.py  download_utils.py  idc_helper.py
fmcib/visualization/: __init__.py  verify_io.py
getting-started/cloud-quick-start/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
getting-started/repository-structure/: index.html
models/: download_foundation_pretrained_model.sh  download_linear_models.sh  download_ssl_pretrained_model.sh  download_supervised_models.sh  download_task1_baselines.sh  download_task2_baselines.sh  download_task3_baselines.sh
notebooks/: usecase.ipynb
outputs/: download_outputs.sh
reference/SUMMARY/: index.html
reference/callbacks/: index.html
reference/callbacks/prediction_saver/: index.html
reference/callbacks/utils/: index.html
reference/datasets/: index.html
reference/datasets/ssl_radiomics_dataset/: index.html
reference/datasets/utils/: index.html
reference/models/: index.html
reference/models/autoencoder/: index.html
reference/models/load_model/: index.html
reference/models/models_genesis/: index.html
reference/optimizers/: index.html
reference/optimizers/lars/: index.html
reference/preprocessing/: index.html
reference/preprocessing/seed_based_crop/: index.html
reference/run/: index.html
reference/ssl/: index.html
reference/ssl/losses/: index.html
reference/ssl/modules/: index.html
reference/transforms/: index.html
reference/transforms/duplicate/: index.html
reference/transforms/med3d/: index.html
reference/transforms/multicrop/: index.html
reference/transforms/random_resized_crop/: index.html
reference/utils/: index.html
reference/utils/download_utils/: index.html
reference/utils/idc_helper/: index.html
reference/visualization/: index.html
reference/visualization/verify_io/: index.html
replication-guide/analysis/: index.html
replication-guide/baselines/: index.html
replication-guide/data/: index.html
replication-guide/download_models/: index.html
replication-guide/fm_adaptation/: index.html
replication-guide/inference/: index.html
replication-guide/reproduce_fm/: index.html
scripts/: generate_api_reference_pages.py  jobs.sh  pred_pipeline.py  pull_artifacts.sh
search/: search_index.json
tests/: test_dummy_data.py
tests/integration/: test_dummy_workflows.py
tests/integration/config/: test.yaml
tests/test_example/: test_hello.py
tutorials/: get_seed_from_mask.ipynb  inspecting_the_fm.ipynb
(+77 files in other folders)
